kubernetes/clashon.yaml
apiVersion: v1
kind: Service
metadata:
  name: clashon
  namespace: clash-of-nations
  labels:
    app: clashon
spec:
  selector:
    app: clashon
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clashon
  namespace: clash-of-nations
  labels:
    app: clashon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clashon
  template:
    metadata:
      labels:
        app: clashon
    spec:
      containers:
      - name: clashon
        image: lucasegp/clash-of-nations:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-secret
