kubernetes/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: clash-of-nations
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
  type: ClusterIP
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: clash-of-nations
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.8-alpine3.18
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-pvc
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-pvc
    spec:
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 1Gi
